--- a/cadastro_ong.html
+++ b/cadastro_ong.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="css/cadastro.css">
+    <title>BlueWave - Cadastro de ONG</title>
+    <link rel="icon" href="img/icone/icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/cadastro_org.css">
 </head>
 <body>
     <div class="container">
