--- a/login.html
+++ b/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <link rel="icon" href="img/icone/icon.ico" type="image/x-icon">
+    <title>BlueWave - Login</title>
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
