--- a/parceiros.html
+++ b/parceiros.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONGs - Informações</title>
+    <title>BlueWave - ONGs - Informações</title>
+    <link rel="icon" href="img/icone/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="parceiros.css">
 </head>
 <body>
