--- a/cadastro_ong.html
+++ b/cadastro_ong.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/cadastro_org.css">
 </head>
 <body>
+    <header>
+        <h1 id="BlueWave"><span class="blue">Blue</span><span class="black">Wave</span></h1>
+    </header>
     <div class="container">
         <h1>Cadastro de usuário</h1>
         <form action="login.html" method="post" onsubmit="return validarSenha()">
