--- a/habitats.html
+++ b/habitats.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/icone/icon.ico" type="image/x-icon">
     <title>BlueWave - ONGs Informações</title>
-    <link rel="stylesheet" href="parceiros.css">
+    <link rel="stylesheet" href="css/habitats.css">
 </head>
 <body>
     <header>
-        <h1>BLUE WAVE</h1>
+        <h1 id="BlueWave"><span class="blue">Blue</span><span class="black">Wave</span></h1>
     </header>
     <main>
         <section class="HABITAT 1">
