--- a/parceiros.html
+++ b/parceiros.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlueWave - ONGs - Informações</title>
     <link rel="icon" href="img/icone/icon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="parceiros.css">
+    <link rel="stylesheet" href="css/parceiros.css">
 </head>
 <body>
     <header>
-        <h1>BLUE WAVE</h1>
+        <h1 id="BlueWave"><span class="blue">Blue</span><span class="black">Wave</span></h1>
     </header>
     <main>
         <section class="ONG 1">
@@ -36,62 +36,5 @@
         <p>551124 - Lucas Leal das Chagas | 554874 - João Gabriel Boaventura Marques e Silva | 558791 - Lucas de Melo Pinheiro Pinho</p>
     </footer>
 </body>
-<style>
-    body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
-}
 
-header {
-    background-color: blue;
-    color: white;
-    padding: 1rem 0;
-    text-align: center;
-}
-
-main {
-    padding: 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.ong-card {
-    background-color: white;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 1rem;
-    padding: 1rem;
-    width: calc(33% - 2rem);
-    box-sizing: border-box;
-    transition: transform 0.2s;
-}
-
-.ong-card:hover {
-    transform: scale(1.05);
-}
-
-.ong-card h2 {
-    color: blue;
-}
-
-.ong-card p {
-    margin: 0.5rem 0;
-}
-
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 1rem 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
-
-</style>
 </html>
