--- a/projeto.html
+++ b/projeto.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>BLUE WAVE</h1>
+        <h1 id="BlueWave"><span class="blue">Blue</span><span class="black">Wave</span></h1>
     </header>
     <main>
         <section class="PROJETO 1">
