--- a/habitats.html
+++ b/habitats.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/icone/icon.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/icone/icon.ico" type="image/x-icon" />
     <title>BlueWave - ONGs Informações</title>
-    <link rel="stylesheet" href="css/habitats.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/habitats.css" />
+  </head>
+  <body>
     <header>
-        <h1 id="BlueWave"><span class="blue">Blue</span><span class="black">Wave</span></h1>
+      <h1 id="BlueWave">
+        <span class="blue">Blue</span><span class="black">Wave</span>
+      </h1>
     </header>
     <main>
-        <section class="HABITAT 1">
-            <h2>Nome da ONG: </h2>
-            <p><strong>Região:</strong> Sudeste</p>
-            <p><strong>Nivel de Poluição:</strong></p>
-            <p><strong>Especies Nativas:</strong></p>
-        </section>
-        <section class="HABITAT 2">
-            <h2>Nome da ONG: </h2>
-            <p><strong>Região:</strong> Nordeste</p>
-            <p><strong>Nivel de Poluição:</strong></p>
-            <p><strong>Especies Nativas:</strong></p>
-        </section>
-        <section class="HABITAT 3">
-            <h2>Nome da ONG: </h2>
-            <p><strong>Região:</strong> Sul</p>
-            <p><strong>Nivel de Poluição:</strong></p>
-            <p><strong>Especies Nativas:</strong></p>
-        </section>
+      <section class="HABITAT 1">
+        <h2>Nome da ONG:</h2>
+        <p><strong>Região:</strong> Sudeste</p>
+        <p><strong>Nivel de Poluição:</strong></p>
+        <p><strong>Especies Nativas:</strong></p>
+      </section>
+      <section class="HABITAT 2">
+        <h2>Nome da ONG:</h2>
+        <p><strong>Região:</strong> Nordeste</p>
+        <p><strong>Nivel de Poluição:</strong></p>
+        <p><strong>Especies Nativas:</strong></p>
+      </section>
+      <section class="HABITAT 3">
+        <h2>Nome da ONG:</h2>
+        <p><strong>Região:</strong> Sul</p>
+        <p><strong>Nivel de Poluição:</strong></p>
+        <p><strong>Especies Nativas:</strong></p>
+      </section>
     </main>
     <footer>
-        <p>© BlueWave 2024</p>
-        <p>551124 - Lucas Leal das Chagas | 554874 - João Gabriel Boaventura Marques e Silva | 558791 - Lucas de Melo Pinheiro Pinho</p>
+      <p>© BlueWave 2024</p>
+      <p>
+        551124 - Lucas Leal das Chagas | 554874 - João Gabriel Boaventura
+        Marques e Silva | 558791 - Lucas de Melo Pinheiro Pinho
+      </p>
     </footer>
-</body>
+  </body>
 </html>
