--- a/habitats.html
+++ b/habitats.html
@@ -15,22 +15,22 @@
     </header>
     <main>
       <section class="HABITAT 1">
-        <h2>Nome da ONG:</h2>
-        <p><strong>Região:</strong> Sudeste</p>
-        <p><strong>Nivel de Poluição:</strong></p>
-        <p><strong>Especies Nativas:</strong></p>
+        <h2>Habitat:</h2>
+        <p><strong>Região:</strong> Norte e Nordeste</p>
+        <p><strong>Descrição: </strong> São ecossistemas complexos e de alta biodiversidade, fornecendo habitat para uma variedade de peixes, invertebrados e algas.</p>
+        <p><strong>Especies Nativas:</strong> Peixes e Caranguejos</p>
       </section>
       <section class="HABITAT 2">
-        <h2>Nome da ONG:</h2>
-        <p><strong>Região:</strong> Nordeste</p>
-        <p><strong>Nivel de Poluição:</strong></p>
-        <p><strong>Especies Nativas:</strong></p>
+        <h2>Habitat:</h2>
+        <p><strong>Região:</strong> Norte</p>
+        <p><strong>Descrição:</strong> São áreas de transição entre os ambientes terrestres e marinhos, caracterizadas pela presença de árvores adaptadas a solos alagados e salinos.</p>
+        <p><strong>Especies Nativas:</strong> Peixes, Polvos e Corais</p>
       </section>
       <section class="HABITAT 3">
-        <h2>Nome da ONG:</h2>
-        <p><strong>Região:</strong> Sul</p>
-        <p><strong>Nivel de Poluição:</strong></p>
-        <p><strong>Especies Nativas:</strong></p>
+        <h2>Habitat:</h2>
+        <p><strong>Região:</strong> Nordeste</p>
+        <p><strong>Descrição:</strong>São ambientes ricos em nutrientes, proporcionando áreas de alimentação e crescimento para muitas espécies marinhas e estuarinas.</p>
+        <p><strong>Especies Nativas:</strong> Peixe-Boi e Bagre</p>
       </section>
     </main>
     <footer>
