--- a/cadastro_ong.html
+++ b/cadastro_ong.html
@@ -6,21 +6,6 @@
     <title>BlueWave - Cadastro de ONG</title>
     <link rel="icon" href="img/icone/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/cadastro_org.css">
-    <style>
-        .button {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            color: #fff;
-            background-color: #007bff;
-            border: none;
-            border-radius: 5px;
-        }
-        #senha-error, #form-error {
-            color: red;
-            display: none;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -33,10 +18,10 @@
             <input type="text" id="nome" name="nome" placeholder="Insira o Nome" required>
             
             <label for="telefone">Insira seu número de telefone para contato:</label>
-            <input type="text" id="telefone" name="telefone" onkeydown="aplicarMascara(this, 'telefone')" maxlength="14" placeholder="Insira seu número de celular: (00) 0000-0000" required>
+            <input type="text" id="telefone" name="telefone" maxlength="14" placeholder="Insira seu número de celular: (00) 0000-0000" required>
 
             <label for="celular">Insira seu número de celular para contato:</label>
-            <input type="text" id="celular" name="celular" onkeydown="aplicarMascara(this, 'celular')" maxlength="15" placeholder="Insira seu número de celular: (99) 99999-9999 𝙊𝙋𝙄𝘾𝙄𝙊𝙉𝘼𝙇">
+            <input type="text" id="celular" name="celular" maxlength="15" placeholder="Insira seu número de celular: (99) 99999-9999 (OPCIONAL)">
 
             <label for="email">Insira um email:</label>
             <input type="email" id="email" name="email" placeholder="EMAIL" required>
@@ -57,77 +42,6 @@
         <p>© BlueWave 2024</p>
         <p>551124 - Lucas Leal das Chagas | 554874 - João Gabriel Boaventura Marques e Silva | 558791 - Lucas de Melo Pinheiro Pinho</p>
     </footer>
-<script>
-    function validarSenha() {
-        var senha = document.getElementById("senha").value;
-        var confirmaSenha = document.getElementById("confirma-senha").value;
-
-        if (senha !== confirmaSenha) {
-            document.getElementById("senha-error").style.display = "block";
-            return false;
-        } else {
-            document.getElementById("senha-error").style.display = "none";
-            return true;
-        }
-    }
-
-    function validarFormulario() {
-        var nome = document.getElementById("nome").value;
-        var telefone = document.getElementById("telefone").value;
-        var celular = document.getElementById("celular").value;
-        var email = document.getElementById("email").value;
-        var senha = document.getElementById("senha").value;
-        var confirmaSenha = document.getElementById("confirma-senha").value;
-
-        if (!nome || !telefone || !email || !senha || !confirmaSenha) {
-            document.getElementById("form-error").style.display = "block";
-            return false;
-        } else {
-            document.getElementById("form-error").style.display = "none";
-        }
-
-        if (validarSenha()) {
-            document.getElementById("cadastroForm").submit();
-            window.location.href = 'telalogin.html';
-        }
-    }
-
-    function aplicarMascara(campo, formato) {
-        if (formato === 'celular') {
-            const separador1 = '(';
-            const separador2 = ')';
-            const separador3 = ' ';
-            const separador4 = '-';
-            const tamanho1 = 0;
-            const tamanho2 = 3; 
-            const tamanho4 = 10; 
-
-            if (campo.value.length === tamanho1) {
-                campo.value += separador1;
-            } else if (campo.value.length === tamanho2) {
-                campo.value += separador2 + separador3;
-            } else if (campo.value.length === tamanho4) {
-                campo.value += separador4;
-            }
-        }
-
-        if (formato === 'telefone') {
-            const separador1 = '(';
-            const separador2 = ')';
-            const separador3 = ' ';
-            const separador4 = '-';
-            const tamanho1 = 0; 
-            const tamanho2 = 3; 
-            const tamanho4 = 9; //
-
-            if (campo.value.length === tamanho1) {
-                campo.value += separador1;
-            } else if (campo.value.length === tamanho2) {
-                campo.value += separador2 + separador3;
-            } else if (campo.value.length === tamanho4) {
-                campo.value += separador4;
-            }
-        }
-    }
-</script>
+    <script src="js/cadastro_ong.js"></script>
+</body>
 </html>
