Adicionado no menu

--- a/menu.html
+++ b/menu.html
@@ -10,17 +10,20 @@
 <body>
     <header>
         <h1 id="BlueWave"><span class="blue">Blue</span><span class="black">Wave</span></h1>
-    </header>
-    <main>
-        <h2>Bem-vindo à página inicial!</h2>
-        <p>Aqui você pode encontrar informações sobre diferentes áreas de atuação da BlueWave.</p>
-                <nav>
+        <nav>
             <ul>
                 <li><a href="parceiros.html">Parceiros</a></li>
                 <li><a href="projeto.html">Projetos</a></li>
                 <li><a href="habitats.html">Habitats</a></li>
             </ul>
         </nav>
+    </header>
+    <main>
+        <h2>Bem-vindo à página inicial!</h2>
+        <p>Nosso objetivo central é divulgar o trabalho de diversas ONGs que atuam na preservação dos habitats marinhos. Este espaço é dedicado a compartilhar informações importante sobre o trabalho ao dos oceanos, destacando os esforços contínuos para a conservação da vida marinha e a saúde dos ecossistemas aquáticos.
+            Além de monitorar o estado atual dos oceanos, o site também serve como uma plataforma para as ONGs divulgarem seus projetos futuros.</p>
+        <p> Além disso, contamos também com informações sobre os próprios habitats marinhos do Brasil, citando informações como a localização e as característica deles, assim trazendo a importância destes habitats.</p>    
+        <p> Por fim, nosso objetivo é trazer visibilidade para a causa da preservação dos habitatnts marinhos, trazendo informações sobre projetos e ONGs Parceiras, para assim todos possam rechecer mais e mais formas de ajudar estes ecossistemas. </p>
     </main>
     <footer>
         <p>© BlueWave 2024</p>
