--- a/projeto.html
+++ b/projeto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlueWave - Projetos de ONG</title>
     <link rel="icon" href="img/icone/icon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="projeto.css" />
+    <link rel="stylesheet" href="css/projeto.css" />
   </head>
   <body>
     <header>
@@ -41,69 +41,5 @@
         Marques e Silva | 558791 - Lucas de Melo Pinheiro Pinho
       </p>
     </footer>
-=======
   </body>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-
-    header {
-      background-color: blue;
-      color: white;
-      padding: 1rem 0;
-      text-align: center;
-    }
-
-    main {
-      padding: 2rem;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      margin: 0 auto; 
-    }
-
-    .ong-card {
-      background-color: white;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      margin: 1rem;
-      padding: 1rem;
-      min-width: 300px;
-      box-sizing: border-box;
-      transition: transform 0.2s;
-      display: flex; 
-      flex-direction: column; 
-      flex-grow: 1; 
-    }
-
-    .ong-card:hover {
-      transform: scale(1.05);
-    }
-
-    .ong-card h2 {
-      color: blue;
-    }
-
-    .ong-card p {
-      margin: 0.5rem 0;
-      line-height: 1.5; 
-    }
-
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 1rem 0;
-      position: relative;
-      width: 100%;
-      bottom: 0;
-    }
-  </style>
 </html>
