--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/icone/icon.ico" type="image/x-icon">
     <title>BlueWave - Login</title>
-    <link rel="stylesheet" href="css/telalogin.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
     <header>
