--- a/menu.html
+++ b/menu.html
@@ -12,6 +12,8 @@
         <h1 id="BlueWave"><span class="blue">Blue</span><span class="black">Wave</span></h1>
         <nav>
             <ul>
+
+                <li><a href="denunciar.html">Denunciar</a></li>
                 <li><a href="parceiros.html">Parceiros</a></li>
                 <li><a href="projeto.html">Projetos</a></li>
                 <li><a href="habitats.html">Habitats</a></li>
